--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   gtag('config', 'AW-17853367293');
 </script>
   <!-- Structured Data & Meta Information -->
-  <link rel="canonical" href="https://www.yahyahsjk.store/">
+  <link rel="canonical" href="https://www.mohameedsa.com/">
 
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -24,8 +24,8 @@
       {
         "@type": "Organization",
         "name": "مناسبات الشرقية لتأجير مستلزمات الحفلات والمناسبات",
-        "url": "https://www.yahyahsjk.store",
-        "logo": "https://www.yahyahsjk.store/logo.png",
+        "url": "https://www.mohameedsa.com",
+        "logo": "https://www.mohameedsa.com/logo.png",
         "contactPoint": {
           "@type": "ContactPoint",
           "telephone": "+966507166995",
@@ -41,8 +41,8 @@
       {
         "@type": "LocalBusiness",
         "name": "مناسبات الشرقية لتأجير مستلزمات الحفلات",
-        "image": "https://www.yahyahsjk.store/logo.png",
-        "url": "https://www.yahyahsjk.store",
+        "image": "https://www.mohameedsa.com/logo.png",
+        "url": "https://www.mohameedsa.com",
         "telephone": "+966507166995",
         "address": {
           "@type": "PostalAddress",
