--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>تأجير طاولات وكراسي افراح | تأجير كنب فاخر | تأجير خيام مناسبات | تأجير جلسات شعبية | تاجير لوازم حفلات | الدمام | الخبر | سيهات | الجبيل | الاحساء</title>
+  </script>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17853367293"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17853367293">
+</script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
