--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   gtag('config', 'AW-17854808256');
 </script>
+  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17854808256"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-17854808256'); </script>
   <!-- Structured Data & Meta Information -->
   <link rel="canonical" href="https://www.mohameedsa.com/">
 
