Add Google Tag Manager script to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>تأجير طاولات وكراسي افراح | تأجير كنب فاخر | تأجير خيام مناسبات | تأجير جلسات شعبية | تاجير لوازم حفلات | الدمام | الخبر | سيهات | الجبيل | الاحساء</title>
+  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17854808256"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-17854808256'); </script>
   </script>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17854808256"></script>
